# x52ros

./: .gitignore  CMakeLists.txt  README.md  mainpage.dox  manifest.xml
src/: X52.cpp
src/X52/srv/: _Calibrate.py  __init__.py
